The second part of Section A has been implemented and tested.